--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"><style type="text/css">.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}</style><link type="text/css" rel="stylesheet" href="index_bestanden/css.css"><style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}</style><style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style { font: 400 11px Roboto, Arial, sans-serif;text-decoration: none; }.gm-style img { max-width: none; }</style><title>W3.CSS Template</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><style type="text/css">.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}</style><link type="text/css" rel="stylesheet" href="index_bestanden/css.css"><style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}</style><style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style { font: 400 11px Roboto, Arial, sans-serif;text-decoration: none; }.gm-style img { max-width: none; }</style><title>Linux lesbrief 10</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="index_bestanden/w3.css">
-<script type="text/javascript" charset="UTF-8" src="index_bestanden/common.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/map.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/util.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/marker.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/onion.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/ViewportInfoService.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/stats.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/controls.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/vt.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/AuthenticationService.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/QuotaService.js"></script></head><body>
+<script type="text/javascript" charset="UTF-8" src="index_bestanden/common.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/map.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/util.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/marker.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/onion.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/ViewportInfoService.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/stats.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/controls.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/vt.js"></script><script type="text/javascript" charset="UTF-8" src="index_bestanden/AuthenticationService.js"></script><script type="text/javascript" charset="UTF-8" <src="index_bestanden/QuotaService.js"></script></head><body>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
@@ -23,7 +23,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="index_bestanden/architect.jpg" alt="Architecture" height="800" width="1500">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Linux</b></span> <span class="w3-hide-small w3-text-light-grey">Lesbrief 10</span></h1>
   </div>
 </header>
 
@@ -92,13 +92,13 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-12">About</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
-minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
 ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia 
-deserunt mollit anim id est laborum consectetur adipiscing elit, sed do 
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
+      occaecat cupidatat non proident, sunt in culpa qui officia
+deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco
       laboris nisi ut aliquip ex ea commodo consequat.
     </p>
@@ -149,7 +149,7 @@ minim veniam, quis nostrud exercitation ullamco
       </button>
     </form>
   </div>
-  
+
 <!-- End page content -->
 </div>
 
